docs/envoy/v1.18.4/_sources/intro/arch_overview/security/external_dep_dataplane_core.rst.txt
.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `Abseil <https://abseil.io/>`__, `5d8fc91 <https://github.com/abseil/abseil-cpp/tree/5d8fc9192245f0ea67094af57399d7931d6bd53f>`__, 2020-11-24, 
  `BoringSSL <https://github.com/google/boringssl>`__, `b049eae <https://github.com/google/boringssl/tree/b049eae83d25977661556dcd913b35fbafb3a93a>`__, 2021-01-25, `cpe:2.3:a:google:boringssl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aboringssl%3A%2A&search_type=all>`__
  `BoringSSL (FIPS) <https://boringssl.googlesource.com/boringssl/+/master/crypto/fipsmodule/FIPS.md>`__, `fips-20190808 <https://commondatastorage.googleapis.com/chromium-boringssl-fips/boringssl-ae223d6138807a13006342edfeef32e813246b39.tar.xz>`__, 2019-08-08, `cpe:2.3:a:google:boringssl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aboringssl%3A%2A&search_type=all>`__
  `c-ares <https://c-ares.haxx.se/>`__, `1.17.2 <https://github.com/c-ares/c-ares/releases/tag/cares-1_17_2>`__, 2021-07-24, `cpe:2.3:a:c-ares_project:c-ares:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ac-ares_project%3Ac-ares%3A%2A&search_type=all>`__
  `fmt <https://fmt.dev>`__, `7.0.3 <https://github.com/fmtlib/fmt/releases/tag/7.0.3>`__, 2020-08-06, `cpe:2.3:a:fmt:fmt:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Afmt%3Afmt%3A%2A&search_type=all>`__
  `gperftools <https://github.com/gperftools/gperftools>`__, `2.8 <https://github.com/gperftools/gperftools/releases/tag/gperftools-2.8>`__, 2020-07-06, `cpe:2.3:a:gperftools_project:gperftools:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agperftools_project%3Agperftools%3A%2A&search_type=all>`__
  `gRPC <https://grpc.io>`__, `1.34.0 <https://github.com/grpc/grpc/releases/tag/v1.34.0>`__, 2020-12-01, `cpe:2.3:a:grpc:grpc:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agrpc%3Agrpc%3A%2A&search_type=all>`__
  `HTTP Parser <https://github.com/nodejs/http-parser>`__, `4f15b7d <https://github.com/nodejs/http-parser/tree/4f15b7d510dc7c6361a26a7c6d2f7c3a17f8d878>`__, 2020-07-10, `cpe:2.3:a:nodejs:node.js:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Anodejs%3Anode.js%3A%2A&search_type=all>`__
  `libcircllhist <https://github.com/circonus-labs/libcircllhist>`__, `63a16dd <https://github.com/circonus-labs/libcircllhist/tree/63a16dd6f2fc7bc841bb17ff92be8318df60e2e1>`__, 2019-02-11, 
  `libevent <https://libevent.org>`__, `62c152d <https://github.com/libevent/libevent/tree/62c152d9a7cd264b993dad730c4163c6ede2e0a3>`__, 2020-07-28, `cpe:2.3:a:libevent_project:libevent:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Alibevent_project%3Alibevent%3A%2A&search_type=all>`__
  `Nghttp2 <https://nghttp2.org>`__, `1.42.0 <https://github.com/nghttp2/nghttp2/releases/tag/v1.42.0>`__, 2020-11-23, `cpe:2.3:a:nghttp2:nghttp2:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Anghttp2%3Anghttp2%3A%2A&search_type=all>`__
  `nlohmann JSON <https://nlohmann.github.io/json>`__, `3.9.1 <https://github.com/nlohmann/json/releases/tag/v3.9.1>`__, 2020-08-06, `cpe:2.3:a:json_project:json:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ajson_project%3Ajson%3A%2A&search_type=all>`__
  `Protocol Buffers <https://developers.google.com/protocol-buffers>`__, `3.14.0 <https://github.com/protocolbuffers/protobuf/releases/tag/v3.14.0>`__, 2020-11-13, `cpe:2.3:a:google:protobuf:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aprotobuf%3A%2A&search_type=all>`__
  `QUICHE <https://quiche.googlesource.com/quiche>`__, `88c8d59 <https://storage.googleapis.com/quiche-envoy-integration/88c8d5903d851744410ea9840201b6507feae981.tar.gz>`__, 2021-04-07, 
  `RapidJSON <https://rapidjson.org>`__, `dfbe1db <https://github.com/Tencent/rapidjson/tree/dfbe1db9da455552f7a9ad5d2aea17dd9d832ac1>`__, 2019-12-03, `cpe:2.3:a:tencent:rapidjson:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Atencent%3Arapidjson%3A%2A&search_type=all>`__
  `RE2 <https://github.com/google/re2>`__, `2020-07-06 <https://github.com/google/re2/releases/tag/2020-07-06>`__, 2020-07-06, 
  `spdlog <https://github.com/gabime/spdlog>`__, `1.7.0 <https://github.com/gabime/spdlog/releases/tag/v1.7.0>`__, 2020-07-09, 
  `tcmalloc <https://github.com/google/tcmalloc>`__, `9f38535 <https://github.com/google/tcmalloc/tree/9f385356c34d4fc11f76a000b609e2b446c20667>`__, 2020-11-04, 
  `xxHash <https://github.com/Cyan4973/xxHash>`__, `0.7.3 <https://github.com/Cyan4973/xxHash/releases/tag/v0.7.3>`__, 2020-03-05, 
  `yaml-cpp <https://github.com/jbeder/yaml-cpp>`__, `98acc5a <https://github.com/jbeder/yaml-cpp/tree/98acc5a8874faab28b82c28936f4b400b389f5d6>`__, 2020-07-27, `cpe:2.3:a:yaml-cpp_project:yaml-cpp:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ayaml-cpp_project%3Ayaml-cpp%3A%2A&search_type=all>`__
  `zlib <https://zlib.net>`__, `79baebe <https://github.com/madler/zlib/tree/79baebe50e4d6b73ae1f8b603f0ef41300110aa3>`__, 2019-04-14, `cpe:2.3:a:gnu:zlib:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agnu%3Azlib%3A%2A&search_type=all>`__
  `zlib-ng <https://github.com/zlib-ng/zlib-ng>`__, `b802a30 <https://github.com/zlib-ng/zlib-ng/tree/b802a303ce8b6c86fbe3f93d59e0a82333768c0c>`__, 2020-10-18, 

